--- a/index.html
+++ b/index.html
@@ -112,15 +112,15 @@ p {
     Ik you broke up nu… but na innum un kooda tha iruken.<br>
     I still love you 🤍<br><br>
 
-    Birthday ah epovum miss pana matten…<br>
+    un Birthday ah epovum miss pana matten…<br>
     entha varasam analum na tha unaku first wish ah irupen 🥹<br><br>
 
-    I love you a lot 💗<br>
+    I love you a lottttttttttttttttttttttttttt tho 💗<br>
     Wish you a very prosperous birthday ✨<br><br>
 
     Happy ah iru…<br>
     Do everything you like hereafter 🌸<br>
-    Nee major aayita… so always choose your happiness 💫
+    Nee major aagita… happy ah iru from your dear koala.💫
   </p>
 
   <div class="heart">💞</div>
@@ -147,3 +147,4 @@ function revealLove() {
 
 </body>
 </html>
+
