--- a/index.html
+++ b/index.html
@@ -112,12 +112,12 @@ p {
   <p>
     Happy birthday Ainy 💕<br><br>
 
-    Ik you broke up nu…<br>
+    Ik you broke up with me nu…<br>
     but na innum un kooda tha iruken.<br>
     I still love you 🤍<br><br>
 
-    Un birthday ah epovum miss pana matten…<br>
-    entha varasam analum,<br>
+    Un birthday ah epovum na miss pana matten…<br>
+    ethana varasam analum,<br>
     <b>na tha unaku first wish ah irupen</b> 🥹<br><br>
 
     I love you a lottttttttttttttttttttttttttt tho 💗<br>
@@ -125,7 +125,7 @@ p {
 
     Happy ah iru…<br>
     Do everything you like hereafter 🌸<br>
-    Nee major aagita… happy ah iru 🤍<br><br>
+    Nee major aagita…  🤍<br><br>
 
     With lots of love,<br>
     <b>your dear Koala 🐨💫</b>
@@ -161,3 +161,4 @@ function revealLove() {
 
 </body>
 </html>
+
