--- a/index.html
+++ b/index.html
@@ -1,164 +1,135 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Happy Birthday Ainy 💖</title>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>Happy Birthday Ainy 💕</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-<style>
-body {
-  margin: 0;
-  height: 100vh;
-  background: linear-gradient(135deg, #ffafbd, #ffc3a0);
-  font-family: 'Segoe UI', sans-serif;
-  overflow: hidden;
-  text-align: center;
-  color: #fff;
-}
+  <style>
+    body {
+      margin: 0;
+      height: 100vh;
+      font-family: 'Segoe UI', sans-serif;
+      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+      overflow: hidden;
+    }
 
-/* Tap Screen */
-#tapScreen {
-  position: fixed;
-  inset: 0;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(135deg, #ff758c, #ff7eb3);
-  z-index: 10;
-  cursor: pointer;
-}
+    /* Tap Screen */
+    #tapScreen {
+      position: fixed;
+      inset: 0;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      font-size: 1.8rem;
+      color: white;
+      text-align: center;
+      cursor: pointer;
+      animation: pulse 1.5s infinite;
+    }
 
-#tapScreen h1 {
-  font-size: 2.5em;
-  animation: pulse 1.5s infinite;
-}
+    @keyframes pulse {
+      0% { transform: scale(1); }
+      50% { transform: scale(1.05); }
+      100% { transform: scale(1); }
+    }
 
-@keyframes pulse {
-  0% { transform: scale(1); }
-  50% { transform: scale(1.1); }
-  100% { transform: scale(1); }
-}
+    /* Content */
+    #content {
+      display: none;
+      padding: 20px;
+      text-align: center;
+      color: #fff;
+      animation: fadeIn 2s ease-in-out;
+    }
 
-/* Main Content */
-.container {
-  position: relative;
-  top: 50%;
-  transform: translateY(-50%);
-  padding: 20px;
-  display: none;
-}
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
 
-h2 {
-  font-size: 2.6em;
-  animation: glow 2s infinite alternate;
-}
+    h1 {
+      font-size: 2.4rem;
+      margin-bottom: 10px;
+    }
 
-p {
-  font-size: 1.15em;
-  line-height: 1.9;
-  margin-top: 20px;
-}
+    p {
+      font-size: 1.15rem;
+      line-height: 1.6;
+      margin: 8px 0;
+    }
 
-.heart {
-  font-size: 3em;
-  animation: beat 1s infinite;
-}
+    /* Flowers */
+    .flower {
+      position: fixed;
+      top: -50px;
+      animation: fall linear infinite;
+      pointer-events: none;
+    }
 
-@keyframes beat {
-  0%, 100% { transform: scale(1); }
-  50% { transform: scale(1.3); }
-}
-
-@keyframes glow {
-  from { text-shadow: 0 0 10px #fff; }
-  to { text-shadow: 0 0 25px #ff4d6d; }
-}
-
-/* Flowers */
-.flower {
-  position: fixed;
-  top: -10%;
-  font-size: 24px;
-  animation: fall linear infinite;
-}
-
-@keyframes fall {
-  to {
-    transform: translateY(110vh) rotate(360deg);
-  }
-}
-</style>
+    @keyframes fall {
+      to {
+        transform: translateY(110vh) rotate(360deg);
+      }
+    }
+  </style>
 </head>
 
 <body>
 
-<!-- Tap to Reveal -->
-<div id="tapScreen" onclick="revealLove()">
-  <h1>Tap to reveal 💖</h1>
-  <p>Something special for you, Ainy ✨</p>
-</div>
+  <!-- TAP SCREEN -->
+  <div id="tapScreen" onclick="revealLove()">
+    💕 Tap to Reveal Your Surprise Ainy 💕
+  </div>
 
-<!-- Background Music -->
-<audio id="music" loop playsinline>
-  <source src="ohpenne.mp3" type="audio/mpeg">
-</audio>
+  <!-- MAIN CONTENT -->
+  <div id="content">
+    <h1>Happy Birthday Ainy 💕</h1>
 
-<!-- Main Content -->
-<div class="container" id="content">
-  <div class="heart">💖</div>
-  <h2>Happy Birthday AINY 🎂</h2>
+    <p>Ik you broke up with me nu…<br>
+    but na innum un kooda tha iruken unkaga tha irupen.<br>
+    I still love you 🤍</p>
 
-  <p>
-    Happy birthday Ainy 💕<br><br>
+    <p>Un birthday ah epovum na miss pana matten…<br>
+    ethana varasam analum<br>
+    <b>na tha unaku first wish ah irupen</b> 🥹</p>
 
-    Ik you broke up with me nu…<br>
-    but na innum un kooda tha iruken.<br>
-    I still love you 🤍<br><br>
+    <p>I love you a lottttttttttttttttttttttttttt tho 💗<br>
+    Wish you a very prosperous birthday ✨</p>
 
-    Un birthday ah epovum na miss pana matten…<br>
-    ethana varasam analum,<br>
-    <b>na tha unaku first wish ah irupen</b> 🥹<br><br>
-
-    I love you a lottttttttttttttttttttttttttt tho 💗<br>
-    Wish you a very prosperous birthday ✨<br><br>
-
-    Happy ah iru…<br>
+    <p>Happy ah iru…<br>
     Do everything you like hereafter 🌸<br>
-    Nee major aagita…  🤍<br><br>
+    Nee major aagita…🤍<br>
+     
+    <p><i>— with lots of love from your dear Koala 🐨💫</i></p>
+  </div>
 
-    With lots of love,<br>
-    <b>your dear Koala 🐨💫</b>
-  </p>
+  <!-- MUSIC -->
+  <audio id="music" loop preload="auto" playsinline>
+    <source src="ohpenne.mp3" type="audio/mpeg">
+  </audio>
 
-  <div class="heart">💞</div>
-</div>
+  <script>
+    function revealLove() {
+      document.getElementById("tapScreen").style.display = "none";
+      document.getElementById("content").style.display = "block";
 
-<script>
-function revealLove() {
-  document.getElementById("tapScreen").style.display = "none";
-  document.getElementById("content").style.display = "block";
+      const music = document.getElementById("music");
+      music.volume = 0.7;
+      music.play().catch(err => console.log("Audio blocked:", err));
 
-  const music = document.getElementById("music");
-  music.currentTime = 0;
-  music.volume = 0.7;
-  music.play().catch(err => {
-    console.log("Audio blocked:", err);
-  });
-
-  const flowers = ["🌸","🌺","🌷","🌹"];
-  for (let i = 0; i < 30; i++) {
-    let flower = document.createElement("div");
-    flower.className = "flower";
-    flower.innerHTML = flowers[Math.floor(Math.random() * flowers.length)];
-    flower.style.left = Math.random() * 100 + "vw";
-    flower.style.animationDuration = (5 + Math.random() * 5) + "s";
-    flower.style.fontSize = (18 + Math.random() * 20) + "px";
-    document.body.appendChild(flower);
-  }
-}
-</script>
+      const flowers = ["🌸","🌺","🌷","🌹","💮"];
+      for (let i = 0; i < 35; i++) {
+        const f = document.createElement("div");
+        f.className = "flower";
+        f.innerHTML = flowers[Math.floor(Math.random() * flowers.length)];
+        f.style.left = Math.random() * 100 + "vw";
+        f.style.fontSize = (16 + Math.random() * 24) + "px";
+        f.style.animationDuration = (6 + Math.random() * 6) + "s";
+        document.body.appendChild(f);
+      }
+    }
+  </script>
 
 </body>
 </html>
-
