--- a/index.html
+++ b/index.html
@@ -1,135 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Happy Birthday Ainy 💕</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<meta charset="UTF-8">
+<title>Happy Birthday Ainy 💕</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <style>
-    body {
-      margin: 0;
-      height: 100vh;
-      font-family: 'Segoe UI', sans-serif;
-      background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-      overflow: hidden;
-    }
+<style>
+body{
+  margin:0;
+  height:100vh;
+  background: radial-gradient(circle at top, #ff7eb3, #1b0b1f);
+  font-family: 'Poppins', 'Segoe UI', sans-serif;
+  overflow:hidden;
+}
 
-    /* Tap Screen */
-    #tapScreen {
-      position: fixed;
-      inset: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      font-size: 1.8rem;
-      color: white;
-      text-align: center;
-      cursor: pointer;
-      animation: pulse 1.5s infinite;
-    }
+/* Tap Screen */
+#tapScreen{
+  position:fixed;
+  inset:0;
+  display:flex;
+  flex-direction:column;
+  justify-content:center;
+  align-items:center;
+  color:#fff;
+  text-align:center;
+  cursor:pointer;
+  backdrop-filter: blur(6px);
+}
 
-    @keyframes pulse {
-      0% { transform: scale(1); }
-      50% { transform: scale(1.05); }
-      100% { transform: scale(1); }
-    }
+#tapScreen h1{
+  font-size:2.2rem;
+  animation:pulse 1.4s infinite;
+}
 
-    /* Content */
-    #content {
-      display: none;
-      padding: 20px;
-      text-align: center;
-      color: #fff;
-      animation: fadeIn 2s ease-in-out;
-    }
+@keyframes pulse{
+  0%{transform:scale(1);}
+  50%{transform:scale(1.08);}
+  100%{transform:scale(1);}
+}
 
-    @keyframes fadeIn {
-      from { opacity: 0; }
-      to { opacity: 1; }
-    }
+/* Glass Card */
+#card{
+  display:none;
+  max-width:420px;
+  margin:12vh auto;
+  padding:28px;
+  background:rgba(255,255,255,0.15);
+  backdrop-filter:blur(14px);
+  border-radius:22px;
+  text-align:center;
+  color:#fff;
+  box-shadow:0 20px 40px rgba(0,0,0,0.4);
+  animation:fadeUp 2s ease;
+}
 
-    h1 {
-      font-size: 2.4rem;
-      margin-bottom: 10px;
-    }
+@keyframes fadeUp{
+  from{opacity:0; transform:translateY(40px);}
+  to{opacity:1; transform:translateY(0);}
+}
 
-    p {
-      font-size: 1.15rem;
-      line-height: 1.6;
-      margin: 8px 0;
-    }
+h2{
+  font-size:2.2rem;
+  margin-bottom:10px;
+}
 
-    /* Flowers */
-    .flower {
-      position: fixed;
-      top: -50px;
-      animation: fall linear infinite;
-      pointer-events: none;
-    }
+#message{
+  font-size:1.05rem;
+  line-height:1.7;
+  white-space:pre-line;
+}
 
-    @keyframes fall {
-      to {
-        transform: translateY(110vh) rotate(360deg);
-      }
-    }
-  </style>
+/* Floating hearts */
+.heart{
+  position:fixed;
+  bottom:-20px;
+  color:rgba(255,255,255,0.7);
+  animation:floatUp linear infinite;
+}
+
+@keyframes floatUp{
+  to{
+    transform:translateY(-110vh) scale(1.4);
+    opacity:0;
+  }
+}
+</style>
 </head>
 
 <body>
 
-  <!-- TAP SCREEN -->
-  <div id="tapScreen" onclick="revealLove()">
-    💕 Tap to Reveal Your Surprise Ainy 💕
-  </div>
+<!-- Tap Screen -->
+<div id="tapScreen" onclick="startLove()">
+  <h1>💗 Tap to reveal 💗</h1>
+  <p>Something from your koala 🐨</p>
+</div>
 
-  <!-- MAIN CONTENT -->
-  <div id="content">
-    <h1>Happy Birthday Ainy 💕</h1>
+<!-- Card -->
+<div id="card">
+  <h2>Happy Birthday Ainy 💕</h2>
+  <div id="message"></div>
+</div>
 
-    <p>Ik you broke up with me nu…<br>
-    but na innum un kooda tha iruken unkaga tha irupen.<br>
-    I still love you 🤍</p>
+<!-- Music -->
+<audio id="music" loop playsinline>
+  <source src="ohpenne.mp3" type="audio/mpeg">
+</audio>
 
-    <p>Un birthday ah epovum na miss pana matten…<br>
-    ethana varasam analum<br>
-    <b>na tha unaku first wish ah irupen</b> 🥹</p>
+<script>
+const text = `
+Happy birthday Ainy 💕
 
-    <p>I love you a lottttttttttttttttttttttttttt tho 💗<br>
-    Wish you a very prosperous birthday ✨</p>
+Ik you broke up with me nu…
+but na innum un kooda tha iruken epovum unkaga tha irupen.
+I still love you tho 🤍
 
-    <p>Happy ah iru…<br>
-    Do everything you like hereafter 🌸<br>
-    Nee major aagita…🤍<br>
-     
-    <p><i>— with lots of love from your dear Koala 🐨💫</i></p>
-  </div>
+Un birthday ah epovum miss pana matten…
+ethana varasam analum seri
+na tha unaku first wish ah irupen 🥹
 
-  <!-- MUSIC -->
-  <audio id="music" loop preload="auto" playsinline>
-    <source src="ohpenne.mp3" type="audio/mpeg">
-  </audio>
+I love you a lottttttttttttttttttttttttttt tho 💗
+Wish you a very prosperous birthday ✨
+ik this is not a lot but still a little from me.
 
-  <script>
-    function revealLove() {
-      document.getElementById("tapScreen").style.display = "none";
-      document.getElementById("content").style.display = "block";
+Happy ah iru…
+Do everything you like hereafter 🌸
+Nee major aagita…
+wish you a happy birthday tho🤍
 
-      const music = document.getElementById("music");
-      music.volume = 0.7;
-      music.play().catch(err => console.log("Audio blocked:", err));
+— your dear Koala 🐨💫
+`;
 
-      const flowers = ["🌸","🌺","🌷","🌹","💮"];
-      for (let i = 0; i < 35; i++) {
-        const f = document.createElement("div");
-        f.className = "flower";
-        f.innerHTML = flowers[Math.floor(Math.random() * flowers.length)];
-        f.style.left = Math.random() * 100 + "vw";
-        f.style.fontSize = (16 + Math.random() * 24) + "px";
-        f.style.animationDuration = (6 + Math.random() * 6) + "s";
-        document.body.appendChild(f);
-      }
+let i=0;
+
+function startLove(){
+  document.getElementById("tapScreen").style.display="none";
+  document.getElementById("card").style.display="block";
+
+  const music=document.getElementById("music");
+  music.volume=0.7;
+  music.play().catch(()=>{});
+
+  const msg=document.getElementById("message");
+  setInterval(()=>{
+    if(i<text.length){
+      msg.innerHTML += text.charAt(i);
+      i++;
     }
-  </script>
+  },35);
+
+  createHearts();
+}
+
+function createHearts(){
+  setInterval(()=>{
+    const h=document.createElement("div");
+    h.className="heart";
+    h.innerHTML="💖";
+    h.style.left=Math.random()*100+"vw";
+    h.style.fontSize=(14+Math.random()*26)+"px";
+    h.style.animationDuration=(6+Math.random()*6)+"s";
+    document.body.appendChild(h);
+    setTimeout(()=>h.remove(),12000);
+  },300);
+}
+</script>
 
 </body>
 </html>
