--- a/index.html
+++ b/index.html
@@ -5,12 +5,15 @@
 <title>Happy Birthday Ainy 💕</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+<!-- Google Fonts -->
+<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@600&family=Poppins:wght@300;400;500&display=swap" rel="stylesheet">
+
 <style>
 body{
   margin:0;
   height:100vh;
-  background: radial-gradient(circle at top, #ff7eb3, #1b0b1f);
-  font-family: 'Poppins', 'Segoe UI', sans-serif;
+  background: radial-gradient(circle at top, #ffb6c1, #2b0a2f);
+  font-family:'Poppins', sans-serif;
   overflow:hidden;
 }
 
@@ -22,20 +25,21 @@ body{
   flex-direction:column;
   justify-content:center;
   align-items:center;
-  color:#fff;
+  color:white;
   text-align:center;
   cursor:pointer;
-  backdrop-filter: blur(6px);
+  backdrop-filter:blur(8px);
 }
 
 #tapScreen h1{
-  font-size:2.2rem;
+  font-family:'Dancing Script', cursive;
+  font-size:2.6rem;
   animation:pulse 1.4s infinite;
 }
 
 @keyframes pulse{
   0%{transform:scale(1);}
-  50%{transform:scale(1.08);}
+  50%{transform:scale(1.1);}
   100%{transform:scale(1);}
 }
 
@@ -43,44 +47,45 @@ body{
 #card{
   display:none;
   max-width:420px;
-  margin:12vh auto;
-  padding:28px;
-  background:rgba(255,255,255,0.15);
-  backdrop-filter:blur(14px);
-  border-radius:22px;
+  margin:10vh auto;
+  padding:28px 22px;
+  background:rgba(255,255,255,0.18);
+  backdrop-filter:blur(16px);
+  border-radius:26px;
   text-align:center;
-  color:#fff;
-  box-shadow:0 20px 40px rgba(0,0,0,0.4);
+  color:white;
+  box-shadow:0 25px 50px rgba(0,0,0,0.45);
   animation:fadeUp 2s ease;
 }
 
 @keyframes fadeUp{
-  from{opacity:0; transform:translateY(40px);}
+  from{opacity:0; transform:translateY(50px);}
   to{opacity:1; transform:translateY(0);}
 }
 
-h2{
-  font-size:2.2rem;
-  margin-bottom:10px;
+#card h2{
+  font-family:'Dancing Script', cursive;
+  font-size:2.8rem;
+  margin-bottom:12px;
 }
 
 #message{
   font-size:1.05rem;
-  line-height:1.7;
+  line-height:1.8;
   white-space:pre-line;
 }
 
-/* Floating hearts */
-.heart{
+/* Floating hearts & petals */
+.float{
   position:fixed;
-  bottom:-20px;
-  color:rgba(255,255,255,0.7);
+  bottom:-30px;
   animation:floatUp linear infinite;
+  pointer-events:none;
 }
 
 @keyframes floatUp{
   to{
-    transform:translateY(-110vh) scale(1.4);
+    transform:translateY(-110vh) rotate(360deg);
     opacity:0;
   }
 }
@@ -91,8 +96,8 @@ h2{
 
 <!-- Tap Screen -->
 <div id="tapScreen" onclick="startLove()">
-  <h1>💗 Tap to reveal 💗</h1>
-  <p>Something from your koala 🐨</p>
+  <h1>Tap to reveal 💕</h1>
+  <p>Something special for you</p>
 </div>
 
 <!-- Card -->
@@ -148,20 +153,21 @@ function startLove(){
     }
   },35);
 
-  createHearts();
+  createFloating();
 }
 
-function createHearts(){
+function createFloating(){
+  const items=["💗","🌸","💮","🌷"];
   setInterval(()=>{
-    const h=document.createElement("div");
-    h.className="heart";
-    h.innerHTML="💖";
-    h.style.left=Math.random()*100+"vw";
-    h.style.fontSize=(14+Math.random()*26)+"px";
-    h.style.animationDuration=(6+Math.random()*6)+"s";
-    document.body.appendChild(h);
-    setTimeout(()=>h.remove(),12000);
-  },300);
+    const el=document.createElement("div");
+    el.className="float";
+    el.innerHTML=items[Math.floor(Math.random()*items.length)];
+    el.style.left=Math.random()*100+"vw";
+    el.style.fontSize=(14+Math.random()*26)+"px";
+    el.style.animationDuration=(6+Math.random()*7)+"s";
+    document.body.appendChild(el);
+    setTimeout(()=>el.remove(),14000);
+  },350);
 }
 </script>
 
