--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
 
-<!-- Cute + dreamy Google font -->
+<!-- Cute + dreamy fonts -->
 <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;600&family=Sacramento&display=swap" rel="stylesheet">
 
 <style>
@@ -17,7 +17,7 @@
 body {
   margin: 0;
   height: 100vh;
-  background: radial-gradient(circle at top, #ffe6f0, #ffb6c1);
+  background: radial-gradient(circle at top, #ff9fbf 0%, #d94f7b 45%, #a8325e 100%);
   font-family: 'Quicksand', sans-serif;
   overflow: hidden;
   color: #fff;
@@ -28,7 +28,7 @@ body {
 #tapScreen {
   position: fixed;
   inset: 0;
-  background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+  background: linear-gradient(135deg, #c94a6a, #ff8fb3);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -66,9 +66,9 @@ body {
 
 h2 {
   font-family: 'Sacramento', cursive;
-  font-size: 3.2em;
+  font-size: 3.3em;
   margin-bottom: 12px;
-  text-shadow: 0 0 18px rgba(255,255,255,0.8);
+  text-shadow: 0 0 18px rgba(255,220,230,0.9);
 }
 
 #message {
@@ -89,13 +89,13 @@ h2 {
   50% { transform: scale(1.3); }
 }
 
-/* Flower petals (mobile safe) */
+/* Flower petals */
 .petal {
   position: absolute;
   top: -10vh;
   pointer-events: none;
   animation: fall linear infinite;
-  opacity: 0.9;
+  opacity: 0.85;
 }
 
 @keyframes fall {
@@ -162,7 +162,7 @@ function startLove() {
 
   const music = document.getElementById("music");
   music.load();
-  music.volume = 0.7;
+  music.volume = 0.65;
   music.play().catch(()=>{});
 
   createPetals();
